--- a/Manage_Book/templates/index.html
+++ b/Manage_Book/templates/index.html
@@ -20,11 +20,11 @@
             <div class="table-title">
                 <div class="row">
                     <div class="col-sm-6">
-						<h2>Manage <b>Employees</b></h2>
+						<h2>Manage <b>Book</b></h2>
 					</div>
 					<div class="col-sm-6">
-						<a href="#addEmployeeModal" class="btn btn-success" data-toggle="modal"><i class="material-icons">&#xE147;</i> <span>Add New Employee</span></a>
-						<a href="/delete_all" class="btn btn-danger" data-toggle="modal"><i class="material-icons">&#xE15C;</i> <span>Delete</span></a>						
+						<a href="#addBookModal" class="btn btn-success" data-toggle="modal"><i class="material-icons">&#xE147;</i> <span>Add New Book</span></a>
+						<a href="/delete_all" class="btn btn-danger" data-toggle="modal"><i class="material-icons">&#xE15C;</i> <span>Delete</span></a> 						
 					</div>
                 </div>
             </div>
@@ -37,71 +37,57 @@
 								<label for="selectAll"></label>
 							</span>
 						</th>
-                        <th>Name</th>
-                        <th>Email</th>
-						<th>Address</th>
-                        <th>Phone</th>
+                        <th>Title</th>
+                        <th>Author</th>
+                        <th>ISBN</th>
                         <th>Actions</th>
                     </tr>
                 </thead>
                 <tbody>
-					{% for i in emp %}
+					{% for i in books %}
                     <tr>
 						<td>
 							<span class="custom-checkbox">
-								<input type="checkbox" id="checkbox1" name="options[]" value="1">
-								<label for="checkbox1"></label>
+								<input type="checkbox" id="checkbox{{ forloop.counter }}" name="options[]" value="{{ book.id }}">
+								<label for="checkbox{{ forloop.counter }}"></label>
 							</span>
 						</td>
-                        <td>{{i.name}}</td>
-                        <td>{{i.email}}</td>
-						<td>{{i.address}}</td>
-                        <td>{{i.phone}}</td>
+                        <td>{{ i.title }}</td>
+                       <td>{{ i.author }}</td>
+                       <td>{{ i.isbn }}</td>
                         <td>
-                            <a href="#editEmployeeModal-{{ forloop.counter}}" class="edit" data-toggle="modal"><i class="material-icons" data-toggle="tooltip" title="Edit">&#xE254;</i></a>
-                            <a href="#deleteEmployeeModal-{{forloop.counter}}" class="delete" data-toggle="modal"><i class="material-icons" data-toggle="tooltip" title="Delete">&#xE872;</i></a>
+                            <a href="#editBookModal-{{ forloop.counter }}" class="edit" data-toggle="modal"><i class="material-icons" data-toggle="tooltip" title="Edit">&#xE254;</i></a>
+                            <a href="#deleteBookModal-{{ forloop.counter }}" class="delete" data-toggle="modal"><i class="material-icons" data-toggle="tooltip" title="Delete">&#xE872;</i></a>
                         </td>
                     </tr>
 					{% endfor %}
               </tbody>
             </table>
-			<div class="clearfix">
-                <div class="hint-text">Showing <b>{{ total_employees }}</b> out of <b>{{ total_employees }}</b> entries</div>
-                <ul class="pagination">
-                    <li class="page-item disabled"><a href="#">Previous</a></li>
-                    <li class="page-item"><a href="#" class="page-link">1</a></li>
-                    <li class="page-item"><a href="#" class="page-link">Next</a></li>
-                </ul>
-            </div>
         </div>
     </div>
 	<!-- Add Modal HTML -->
-	<div id="addEmployeeModal" class="modal fade">
+	<div id="addBookModal" class="modal fade">
 		<div class="modal-dialog">
 			<div class="modal-content">
-				<form method="POST" action="{% url 'add_employee' %}">
+				<form method="POST" action="{% url 'add_book' %}">
 					{% csrf_token %}
-					<div class="modal-header">						
-						<h4 class="modal-title">Add Employee</h4>
+					<div class="modal-header">                        
+						<h4 class="modal-title">Add Book</h4>
 						<button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
 					</div>
-					<div class="modal-body">					
+					<div class="modal-body">                    
 						<div class="form-group">
-							<label>Name</label>
-							<input type="text" class="form-control" name="name" required>
+							<label>Title</label>
+							<input type="text" class="form-control" name="title" required>
 						</div>
 						<div class="form-group">
-							<label>Email</label>
-							<input type="email" class="form-control" name="email" required>
+							<label>Author</label>
+							<input type="text" class="form-control" name="author" required>
 						</div>
 						<div class="form-group">
-							<label>Address</label>
-							<textarea class="form-control" name="address" required></textarea>
-						</div>
-						<div class="form-group">
-							<label>Phone</label>
-							<input type="text" class="form-control" name="phone"  required>
-						</div>					
+							<label>ISBN</label>
+							<input type="text" class="form-control" name="isbn" required>
+						</div>                    
 					</div>
 					<div class="modal-footer">
 						<input type="button" class="btn btn-default" data-dismiss="modal" value="Cancel">
@@ -111,33 +97,31 @@
 			</div>
 		</div>
 	</div>
+
+
 	<!-- Edit Modal HTML -->
-	{% for i in emp %}
-	<div id="editEmployeeModal-{{forloop.counter}}" class="modal fade">
+	{% for i in books %}
+	<div id="editBookModal-{{ forloop.counter }}" class="modal fade">
 		<div class="modal-dialog">
 			<div class="modal-content">
-				<form method="POST" action="{% url 'update_employee' i.id %}">
+				<form method="POST" action="{% url 'update_book' i.id %}">
 					{% csrf_token %}
 					<div class="modal-header">						
-						<h4 class="modal-title">Edit Employee</h4>
+						<h4 class="modal-title">Edit Book</h4>
 						<button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
 					</div>
 					<div class="modal-body">					
 						<div class="form-group">
-							<label>Name</label>
-							<input value="{{i.name}}" type="text" class="form-control" name="name" required>
+							<label>Title</label>
+							<input value="{{i.title}}" type="text" class="form-control" name="title" required>
 						</div>
 						<div class="form-group">
-							<label>Email</label>
-							<input value="{{i.email}}" type="email" class="form-control" name="email" required>
+							<label>Author</label>
+							<input value="{{i.author}}" type="text" class="form-control" name="author" required>
 						</div>
 						<div class="form-group">
-							<label>Address</label>
-							<textarea class="form-control" name="address" required>{{i.address}}</textarea>
-						</div>
-						<div class="form-group">
-							<label>Phone</label>
-							<input value="{{i.phone}}"  type="text" class="form-control" name="phone" required>
+							<label>ISBN</label>
+							<input value="{{i.isbn}}" type="text" class="form-control" name="isbn" required>
 						</div>					
 					</div>
 					<div class="modal-footer">
@@ -148,30 +132,31 @@
 			</div>
 		</div>
 	</div>
-	{% endfor %}
-	<!-- Delete Modal HTML -->
-	{% for i in emp %}
-	<div id="deleteEmployeeModal-{{forloop.counter}}" class="modal fade">
+	
+	<!-- Delete Modal -->
+	<div id="deleteBookModal-{{ forloop.counter }}" class="modal fade">
 		<div class="modal-dialog">
 			<div class="modal-content">
-				<form metohd="POST">
+				<form method="POST" action="{% url 'delete_book' i.id %}">
+					{% csrf_token %}
 					<div class="modal-header">						
-						<h4 class="modal-title">Delete Employee</h4>
+						<h4 class="modal-title">Delete Book</h4>
 						<button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
 					</div>
 					<div class="modal-body">					
-						<p>Are you sure you want to delete these Records?</p>
+						<p>Are you sure you want to delete this book?</p>
 						<p class="text-warning"><small>This action cannot be undone.</small></p>
 					</div>
 					<div class="modal-footer">
 						<input type="button" class="btn btn-default" data-dismiss="modal" value="Cancel">
-						<a href="/delete_employee/{{i.id}}" type="submit" class="btn btn-danger" >Delete</a>
+						<input type="submit" class="btn btn-danger" value="Delete">
 					</div>
 				</form>
 			</div>
 		</div>
 	</div>
 	{% endfor %}
+    
     <script src="{% static 'js/app.js' %}"></script>
 </body>
 </html>
